Note index, show, create and Entity framework core

--- a/FirstAPI/appsettings.json
+++ b/FirstAPI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "FirstAPIConnectionString": "Server=localhost,1433; User=SA; Password=password@2; Database=FirstAPI;Trusted_Connection=False;TrustServerCertificate=True;"
+  }
 }
